--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,5 +34,6 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git checkout -B release
+          git checkout -b release
+          git merge --no-ff main
           git push origin release --force
