--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Checkout release branch
         run: |
-          git checkout -b release
+          git checkout -B release
           git push origin release
 
       - name: Create Pull Request
