--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "version": "1.0.0",
     "devDependencies": {
         "@semantic-release/changelog": "6.0.3",
-        "@semantic-release/git": "10.0.1",
-        "@semantic-release/github": "10.0.4",
+        "conventional-changelog-conventionalcommits": "8.0.0",
         "semantic-release": "23.1.1"
     },
     "engines": {
